2009-10-31  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by John Sullivan.

        https://bugs.webkit.org/show_bug.cgi?id=30982
        createHTMLDocument doesn't escape ampersand and less-than in title

        Test: fast/dom/DOMImplementation/createHTMLDocument-title.html

        * dom/DOMImplementation.cpp: (WebCore::DOMImplementation::createHTMLDocument):
        Set document title after creating the document, avoiding parser intricacies.

2009-11-01  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Double clicking on a breakpoints should not select text
        https://bugs.webkit.org/show_bug.cgi?id=30950

        * inspector/front-end/SourceFrame.js:
        (WebInspector.SourceFrame.prototype._documentMouseDown):

2009-11-01  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Darin Adler.

        Fix assertion falure in RenderObjectChildList::updateBeforeAfterContent().

        [Crash (debug)] Combination of list-item and :after causes assertion failure
        https://bugs.webkit.org/show_bug.cgi?id=30944

        Test: fast/css/list-item-pseudo-nocrash.html

        * rendering/RenderObjectChildList.cpp:
        (WebCore::RenderObjectChildList::updateBeforeAfterContent):

2009-11-01  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30586
        [GTK] Failing test media/video-src-empty.html

        Correctly set network/ready state depending on GStreamer errors
        received on the bus.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mediaPlayerPrivateMessageCallback):

2009-10-31  Oliver Hunt  <oliver@apple.com>

        Build fix

        * platform/graphics/mac/GraphicsContext3DMac.cpp:
        (WebCore::GraphicsContext3D::attachShader):

2009-10-31  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin Adler.
